Fixed width of divs to be aligned in the same column

--- a/style.css
+++ b/style.css
@@ -34,7 +34,13 @@
     font-weight: bold;
     float: right;
     border-radius: 10px;
+    margin-top: 3em;
+    width: 100%;
     
+}
+
+h2 {
+    font-weight: bold;
 }
 
 .todo {
@@ -43,4 +49,6 @@
     font-weight: bold;
     float: right;
     border-radius: 10px;
+    margin-top: 3em;
+    width: 100%;
 }
